--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'org.example'
@@ -15,5 +16,30 @@ dependencies {
 }
 
 test {
+    // Hardcoded link to agent jar. This will be injected by the Matrixer tool later on
+    jvmArgs '-javaagent:/Users/macbookpro/programming/skola/vt21-applied/code/matrixer/app/build/libs/agentJar.jar=arg1:matrixerprototype'
     useJUnitPlatform()
+    testLogging {
+        events 'passed', 'skipped', 'failed'  // Events to print out
+
+        showStackTraces false
+        showExceptions true
+        showCauses true
+        exceptionFormat 'full'
+
+        showStandardStreams true
+    }
+//    finalizedBy jacocoTestReport
 }
+
+jacocoTestReport {
+    dependsOn test  // tests are required before generating report
+    reports {
+        xml.enabled true
+        csv.enabled true
+    }
+}
+
+//jacoco {
+//    reportsDirectory = file("$buildDir/customJacocoReportDir")
+//}
