--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,19 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
+<!--        <configuration>-->
+<!--          <argLine>-->
+<!--            -javaagent:/Users/macbookpro/programming/skola/vt21-applied/code/matrixer/app/build/libs/agentJar.jar=arg1:org.matrixertest-->
+<!--          </argLine>-->
+<!--        </configuration>-->
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
+<!--        <configuration>-->
+<!--          <argLine>-->
+<!--            -javaagent:/Users/macbookpro/programming/skola/vt21-applied/code/matrixer/app/build/libs/agentJar.jar=arg1:org.matrixertest-->
+<!--          </argLine>-->
+<!--        </configuration>-->
         <version>2.22.2</version>
       </plugin>
 
